新增加工工艺选择页面和企业详细信息页面 完善企业信息页面新增上传产品照片功能

--- a/address_management.html
+++ b/address_management.html
@@ -16,7 +16,7 @@
 		</li>
 		<li class="info-list">
 			<span class="info-left">联系电话</span>
-			<input type='text' placeholder="手机或固话"></input>
+			<input type='tel' maxlength="11" placeholder="手机或固话">
 		</li>
 		<li class="info-list">
 			<span class="info-left">选择地区</span>
@@ -25,11 +25,11 @@
 		</li>
 		<li class="info-list">
 			<span class="info-left">详细地址</span>
-			<input type='text' placeholder="街道门牌信息" ></input>
+			<input type='text' placeholder="街道门牌信息" >
 		</li>
 		<li class="info-list">
 			<span class="info-left">邮政编码</span>
-			<input type='text' placeholder="请填写正确的邮政编码" ></input>
+			<input type='text' placeholder="请填写正确的邮政编码" >
 		</li>
 	</ul>
 	<div class="btn-fixed">
