--- a/apply_order.html
+++ b/apply_order.html
@@ -12,7 +12,7 @@
 	<ul class="info-wrapper verify">
 		<li class="info-list">
 			<span class="info-left">申请数量</span>
-			<input type='text' placeholder="请输入数量" class="info-right"></input>
+			<input type='number' placeholder="请输入数量" class="info-right"></input>
 		</li>
 		<li class="info-list">
 			<span class="info-left">申请说明</span>
