--- a/build_worksheet.html
+++ b/build_worksheet.html
@@ -15,9 +15,11 @@
 			<input type='text' placeholder="如：纯棉T袖" class="info-right">
 		</li>
 		<li class="info-list">
-			<span class="info-left">工艺类别</span>
-			<input type='text' placeholder="请选择工艺类别" class="info-right">
-			<span class="icon-arrow-r more"></span>
+			<a href="./main_machining.html">
+				<span class="info-left">工艺类别</span>
+				<span class="select-container"><span class="hui">请选择工艺类别</span></span>
+				<span class="icon-arrow-r more"></span>
+			</a>
 		</li>
 		<li class="info-list">
 			<span class="info-left">订单数量</span>
@@ -25,7 +27,7 @@
 		</li>
 		<li class="info-list play-father">
 			<span class="info-left">销售市场</span>
-			<input type='text' placeholder="请选择销售市场" class="info-right">
+			<span id="picker2" class="info-right select-container infoSelect"><span class="hui">请选择销售市场</span></span>
 			<span class="icon-arrow-r more"></span>
 		</li>
 		<li class="info-list play-father">
