--- a/confirm.html
+++ b/confirm.html
@@ -17,7 +17,7 @@
 			<span class="fr">3K玩游戏</span>
 		</div>
 	</div>
-	<a href='./repaired.html' class="btn btn-default">立即支付</a>
+	<a href='javascript:;' class="btn btn-default">立即支付</a>
 	<div class="explain">
 		<p>支付安全由中国人民财产保险股份有限公司承担</p>
 	</div>
