--- a/lease_step2.html
+++ b/lease_step2.html
@@ -33,7 +33,7 @@
 		<li class="info-list">
 			<span class="info-item">单针平缝机</span>
 			<input type="number" placeholder="数量" class="btn btn-span fr">
-			<span id="picker1" class='btn btn-span fr'><span class="hui">9成新</span></span>
+			<span id="picker1" class='btn btn-span fr oldAndNew'><span class="hui">9成新</span></span>
 		</li>
 		<li class="info-list">
 			<span class="info-item">双针平缝机</span>
@@ -42,26 +42,25 @@
 		</li>
 	</ul>
 	<div class="p-title">收货地址</div>
-	<label for='city-picker' class='select-text block'>
+	<div class='select-text block'>
 		<span id="city-picker" class="time-placeholder w-16">选择收货地址</span>
 		<span class="icon-arrow-r more"></span>
-	</label>
+	</div>
 	<div class="p-title">起租日期</div>
 	<label for='date' class='select-text block'>
-		<span class="time-container time-placeholder w-16">选择起租日期</span>
+		<span class="time-container time-placeholder">选择起租日期</span>
 		<input type="date" class="date" id="date" style="opacity: 0; height: 1.1rem">
 		<span class="icon-arrow-r more"></span>
 	</label>
 	<div class="p-title">还租日期</div>
 	<label for='date-1' class='select-text block'>
-		<span class="time-container time-placeholder w-16">选择还租日期</span>
+		<span class="time-container time-placeholder">选择还租日期</span>
 		<input type="date" class="date" id="date-1" style="opacity: 0; height: 1.1rem">
 		<span class="icon-arrow-r more"></span>
 	</label>
 	<a href="./lease_step3.html" class="btn btn-default btn-top">下一步</a>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
-	<script type="text/javascript" src="./js/single.js"></script>
 	<script type="text/javascript" src="./js/city.js"></script>
 	<script src="./js/picker.min.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
