--- a/main_machining.html
+++ b/main_machining.html
@@ -9,53 +9,42 @@
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
 <body>
-	<ul class="step-wrapper">
-		<div class="step-line"></div>
-		<li class="step step1 active">
-			<a href="javascript:;">1</a>
-			<p>选择设备</p>
-		</li>
-		<li class="step step2">
-			<a href="javascript:;">2</a>
-			<p>需求确认</p>
-		</li>
-		<li class="step step3">
-			<a href="javascript:;">3</a>
-			<p>进行支付</p>
-		</li>
-	</ul>
 	<ul class="info-wrapper">
-		<li class="title info-list">
-			<p class="title-top">选择租赁设备</p>
-			<p class="title-bottom">选择您需要的设备，或选择其他进行详细说明需求</p>
-		</li>
 		<li class="info-list info-check">
-			<span class="info-item">GC6710</span>
+			<span class="info-item">梭织服装</span>
 			<i class="icon-check checked"></i>
 		</li>
 		<li class="info-list info-check">
-			<span class="info-item">GK0056</span>
+			<span class="info-item">针织服装</span>
 			<i class="icon-check checked"></i>
 		</li>
 		<li class="info-list info-check">
-			<span class="info-item">GK335</span>
+			<span class="info-item">毛衫</span>
 			<i class="icon-check checked"></i>
 		</li>
 		<li class="info-list info-check">
-			<span class="info-item">GC6170</span>
+			<span class="info-item">皮革/仿皮</span>
 			<i class="icon-check checked"></i>
 		</li>
 		<li class="info-list info-check">
-			<span class="info-item">GC6880</span>
+			<span class="info-item">裘皮/仿裘皮</span>
 			<i class="icon-check checked"></i>
 		</li>
 		<li class="info-list info-check">
-			<span class="info-item">其他</span>
+			<span class="info-item">服饰</span>
+			<i class="icon-check checked"></i>
+		</li>
+		<li class="info-list info-check">
+			<span class="info-item">家纺</span>
+			<i class="icon-check checked"></i>
+		</li>
+		<li class="info-list info-check">
+			<span class="info-item">纺织消费品</span>
 			<i class="icon-check checked"></i>
 		</li>
 	</ul>
 	<div class="btn-fixed">
-		<a href="./lease_step2.html" class="btn btn-default">下一步</a>
+		<a href="javascript:;" class="btn btn-default">确定</a>
 	</div>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
