--- a/neutral.html
+++ b/neutral.html
@@ -13,12 +13,12 @@
 		<div class="info-list">
 			<span class="info-left">接单档期</span>
 			<label for='date-1'>
-				<span class="time-container hui">2017-10-20</span>
+				<span class="container-s hui">2017-10-20</span>
 				<input type="date" class="date" id="date-1" style="opacity: 0;">
 			</label>
 			<span class='timeto'>至</span>
 			<label for='date-2'>
-				<span class="time-container hui">2017-10-27</span>
+				<span class="container-s hui">2017-10-27</span>
 				<input type="date" class="date" id="date-2" style="opacity: 0;">
 			</label>
 		</div>
