--- a/phone_verify.html
+++ b/phone_verify.html
@@ -13,7 +13,7 @@
 		<li class="info-list">
 			<label for="city-picker">
 				<span class="info-left">国家/地区</span>
-				<span id="city-picker" class="w-11 hui">中国(+86)</span>
+				<span id="city-picker" class="w-11"><span class="hui">中国(+86)</span></span>
 				<span class="icon-arrow-r more"></span>
 			</label>
 		</li>
