--- a/position.html
+++ b/position.html
@@ -18,43 +18,39 @@
 	</div>
 	<div class="search-box blur">
 		<div class="select">
-			<span>定位中</span>
+			<span class='current-location'>定位中</span>
 			<i class="icon-down"></i>
 		</div>
 		<input type="search" name="" placeholder="搜索类型">
 		<i class="icon-search"></i>
+		<a href="javascript:;" class="search-text">搜索</a>
 	</div>
 	<div class="map"></div>
-	<div class="city-select">
-		<ul class='city-list'>
-			<li>泉州市一二三四</li>
-			<li class="city-selected">泉州市2</li>
-			<li>泉州市3</li>
-			<li>泉州市4</li>
-			<li>泉州市5</li>
-			<li>泉州市6</li>
-			<li>泉州市7</li>
-			<li>泉州市8</li>
-			<li>泉州市9</li>
-			<li>泉州市10</li>
-			<li>泉州市11</li>
-			<li>泉州市12</li>
-			<li>泉州市13</li>
-			<li>泉州市14</li>
-			<li>泉州市15</li>
-			<li>泉州市16</li>
-		</ul>
-		<div class="current-city">
-			<span>当前城市：</span>
-			<span class="city">泉州市</span>
-			<a href="#" class="charge">切换<i class="icon-arrow-r"></i></a>
-		</div>
-	</div>
 	<div class="button">
 		<input type="hidden" value="0">
 		<div class="button-switch"></div>
 		<div class="button-text-off">附近师傅</div>
 		<div class="button-text-on">附近工单</div>
+	</div>
+	<div class="city-select">
+		<ul class='city-list'>
+			<li class="city-selected">厦门市</li>
+			<li>漳州市</li>
+			<li>福州市</li>
+			<li>三明市</li>
+			<li>泉州市</li>
+			<li>龙岩市</li>
+			<li>莆田市</li>
+			<li>宁德市</li>
+			<li>石狮市</li>
+			<li>晋江市</li>
+			<li>南平市</li>
+		</ul>
+		<div class="current-city">
+			<span>当前城市：</span>
+			<span class="city">厦门市</span>
+			<a href="#" class="charge">切换<i class="icon-arrow-r"></i></a>
+		</div>
 	</div>
 	<div class="location">
 		<i class="icon-location"></i>
