--- a/worksheet_detail.html
+++ b/worksheet_detail.html
@@ -34,9 +34,11 @@
 			<span class="info-right">纯棉T袖</span>
 		</li>
 		<li class="info-list">
-			<span class="info-left">工艺类别</span>
-			<span class="info-right">普通梭织薄料服装</span>
-			<span class="icon-arrow-r more"></span>
+			<a href="./main_machining.html">
+				<span class="info-left">工艺类别</span>
+				<span class="info-right">普通梭织薄料服装</span>
+				<span class="icon-arrow-r more"></span>
+			</a>
 		</li>
 		<li class="info-list">
 			<span class="info-left">订单数量</span>
@@ -44,7 +46,7 @@
 		</li>
 		<li class="info-list play-father">
 			<span class="info-left">销售市场</span>
-			<span class="info-right">内销</span>
+			<span id='picker2' class="info-right select-container infoSelect">内销</span>
 			<span class="icon-arrow-r more"></span>
 		</li>
 		<li class="info-list play-father">
@@ -67,6 +69,43 @@
 			<span class="info-right">需要保质保量</span>
 		</li>
 	</ul>
+	<div class="p-title">接单工厂</div>
+	<div class="acq-company">
+		<a href="./company_detail.html" class="pt-wrapper a-block clearfix">
+			<div class="pt-pic avatar">
+				<img src="./images/avatar.png">
+			</div>
+			<div class="pt-text">
+				<p class="pt-title pt-18">
+					泉州李雷服饰有限公司
+				</p>
+				<p class="pt-content ">
+					<i class="icon-confirm confirm-style"></i>
+					<span>企业认证</span>
+				</p>
+			</div>
+			<span class="icon-arrow-r more-middle"></span>
+		</a>
+		<p class="ordered">已接单：<span>300</span>件</p>
+	</div>
+	<div class="acq-company">
+		<a href="./company_detail.html" class="pt-wrapper a-block clearfix">
+			<div class="pt-pic avatar">
+				<img src="./images/avatar4.png">
+			</div>
+			<div class="pt-text">
+				<p class="pt-title pt-18">
+					泉州韩梅梅服饰有限公司
+				</p>
+				<p class="pt-content ">
+					<i class="icon-confirm confirm-style"></i>
+					<span>企业认证</span>
+				</p>
+			</div>
+			<span class="icon-arrow-r more-middle"></span>
+		</a>
+		<p class="ordered">已接单：<span>300</span>件</p>
+	</div>
 	<button type="button" class="btn btn-danger btn-top">删除</button>
 
 
@@ -76,7 +115,5 @@
 	<script src="./js/picker.min.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
 
-	<script>
-	</script>
 </body>
 </html>
