--- a/apply_order_detail.html
+++ b/apply_order_detail.html
@@ -36,7 +36,6 @@
 		<li class="info-list">
 			<span class="info-left">工艺类别</span>
 			<span class="info-right">普通梭织薄料服装</span>
-			<span class="icon-arrow-r more"></span>
 		</li>
 		<li class="info-list">
 			<span class="info-left">订单数量</span>
@@ -45,23 +44,14 @@
 		<li class="info-list play-father">
 			<span class="info-left">销售市场</span>
 			<span class="info-right">内销</span>
-			<span class="icon-arrow-r more"></span>
 		</li>
 		<li class="info-list play-father">
-			<label for="date">
-				<span class="info-left">预计交货</span>
-				<span class="time-container">2017-12-12</span>
-				<span class="icon-arrow-r more"></span>
-				<input type="date" class="date" id="date" style="opacity: 0;">
-			</label>
+			<span class="info-left">预计交货</span>
+			<span class="info-right">2017-12-12</span>
 		</li>
 		<li class="info-list play-father">
-			<label for="city-picker">
-				<span class="info-left">地区要求</span>
-				<span id='value1'></span>
-				<span id="city-picker" class="w-11">泉州</span>
-				<span class="icon-arrow-r more"></span>
-			</label>
+			<span class="info-left">地区要求</span>
+			<span class="info-right">泉州</span>
 		</li>
 		<li class="info-list play-father">
 			<span class="info-left">订单说明</span>
@@ -72,8 +62,6 @@
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./js/swiper.min.js"></script>
-	<script type="text/javascript" src="./js/city.js"></script>
-	<script src="./js/picker.min.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
 </body>
 </html>
