--- a/arrive_time.html
+++ b/arrive_time.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="./css/jquery-ui.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/jquery-ui-timepicker-addon.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
@@ -13,14 +15,27 @@
 		<div class='header'>请填写真实信息</div>
 	</div>
 	<div class="p-title">到达时间：</div>
-	<label for='date' class='select-text block'>
-		<span class="time-container time-placeholder w-16">请选择到达时间</span>
-		<input type="date" class="date" id="date" style="opacity: 0;">
+	<label for='starttime' class='select-text block'>
+		<input type="text" class="date-picker" id="starttime" placeholder="请选择到达时间" data-date-format="yyyy-mm-dd" name="starttime" readonly="readonly" />
 	</label>
 
 	<a href="javascript:;" class="btn btn-default btn-bottom">提交</a>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
+	<script type="text/javascript" src="./js/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="./js/jquery-ui-timepicker-addon.min.js"></script>
+	<script type="text/javascript" src="./js/jquery-ui-timepicker-zh-CN.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
+	<script type="text/javascript">
+		 $('.date-picker').datetimepicker({
+            lang: "ch",
+            timeFormat: "HH:mm:ss",
+            dateFormat: "yy-mm-dd",
+            dayNamesMin: ["周日", "周一", "周二", "周三", "周四", "周五", "周六"],
+            monthNamesShort: ["一月", "二月", "三月", "四月", "五月", "六月", "七月", "八月", "九月", "十月", "十一月", "十二月"],
+            changeMonth: true,
+            changeYear: true,
+        });
+	</script>
 </body>
 </html>
