--- a/company_detail.html
+++ b/company_detail.html
@@ -44,9 +44,9 @@
 				<h4>企业介绍</h4>
 				<p>按时、准时、达标完成任务，保质保量</p>
 			</li>
-			<li class="info-item">
+			<li class="info-item clearfix">
 				<h4>企业照片</h4>
-				<ul class="clearfix">
+				<ul class="img-views clearfix">
 					<li>
 						<img src="./images/company-1.png">
 					</li>
@@ -60,13 +60,23 @@
 						<img src="./images/company-4.png">
 					</li>
 					<li>
-						更多
+						<img src="./images/company-1.png">
+					</li>
+					<li>
+						<img src="./images/company-2.png">
+					</li>
+					<li>
+						<img src="./images/company-3.png">
+					</li>
+					<li>
+						<img src="./images/company-4.png">
 					</li>
 				</ul>
+				<a href="./views-photos.html" class="more-photos">更多</a>
 			</li>
-			<li class="info-item">
+			<li class="info-item clearfix">
 				<h4>产品照片</h4>
-				<ul class="clearfix">
+				<ul class="img-views clearfix">
 					<li>
 						<img src="./images/cloth.png">
 					</li>
@@ -78,11 +88,9 @@
 					</li>
 					<li>
 						<img src="./images/cloth.png">
-					</li>
-					<li>
-						更多
 					</li>
 				</ul>
+				<a href="./views-photos.html" class="more-photos">更多</a>
 			</li>
 		</ul>
 		<a href='#' class="btn btn-default btn-top">修改</a>
