优化部分页面显示及交互效果

--- a/address_list.html
+++ b/address_list.html
@@ -17,11 +17,13 @@
 				<p class="address">福建省石狮市服装城总部大厦2楼</p>
 			</div>
 			<div class="address-option">
-				<input type="checkbox" name="checkbox" class="checkbox" id="addr-1">
-				<label for="addr-1" class='checkbox-icon'></label>
-				<span class='adr'>默认地址</span>
-				<a href="#" class="del">删除</a href="#">
-				<a href="#" class="edit">编辑</a href="#">
+				<input type="radio" name="checkbox" class="checkbox" id="addr-1">
+				<label for="addr-1" class='checkbox-icon default-addr'></label>
+				<label for='addr-1'>
+					<span class='adr'>默认地址</span>
+				</label>
+				<a href="#" class="del">删除</a>
+				<a href="#" class="edit">编辑</a>
 			</div>
 		</li>
 		<li class="address-m">
@@ -31,11 +33,13 @@
 				<p class="address">广东省广州市新港中路TIT创意园腾讯自编八号楼前台自编八号楼前台</p>
 			</div>
 			<div class="address-option">
-				<input type="checkbox" name="checkbox" class="checkbox" id='addr-2'>
-				<label for="addr-2" class='checkbox-icon'></label>
-				<span class='adr'>默认地址</span>
-				<a href="#" class="del">删除</a href="#">
-				<a href="#" class="edit">编辑</a href="#">
+				<input type="radio" name="checkbox" class="checkbox" id='addr-2'>
+				<label for="addr-2" class='checkbox-icon default-addr'></label>
+				<label for='addr-2'>
+					<span class='adr'>默认地址</span>
+				</label>
+				<a href="#" class="del">删除</a>
+				<a href="#" class="edit">编辑</a>
 			</div>
 		</li>
 	</ul>
