--- a/build_worksheet.html
+++ b/build_worksheet.html
@@ -23,7 +23,7 @@
 		</li>
 		<li class="info-list">
 			<span class="info-left">订单数量</span>
-			<input type='text' placeholder="请填写预计数量" class="info-right">
+			<input type='number' placeholder="请填写预计数量" class="info-right">
 		</li>
 		<li class="info-list play-father">
 			<span class="info-left">销售市场</span>
