--- a/certification_p.html
+++ b/certification_p.html
@@ -17,11 +17,11 @@
 		<ul class="info-wrapper verify">
 			<li class="info-list">
 				<span class="info-left">姓名</span>
-				<input type='text' placeholder="**文(请输入完整姓名)"></input>
+				<input type='text' placeholder="**文(请输入完整姓名)">
 			</li>
 			<li class="info-list">
 				<span class="info-left">身份证号</span>
-				<input type='text' placeholder="请输入身份证号"></input>
+				<input type='number' placeholder="请输入身份证号">
 			</li>
 			<li class="info-list">
 				<span class="info-left">手机号码</span>
@@ -30,7 +30,7 @@
 			</li>
 			<li class="info-list">
 				<span class="info-left">验证码</span>
-				<input type='text' placeholder="请输入验证码" ></input>
+				<input type='number' placeholder="请输入验证码" >
 			</li>
 		</ul>
 		<div class="p-title">身份证照片</div>
