--- a/company_info.html
+++ b/company_info.html
@@ -27,7 +27,7 @@
 		<li class="info-list">
 			<label for='date' class="label">
 				<span class="info-left">成立时间*</span>
-				<span class="time-container"><span class="time-placeholder">请选择年份</span></span>
+				<span class="time-container"><span class="hui">请选择年份</span></span>
 				<span class="icon-arrow-r more"></span>
 				<input type="date" class="date" id="date">
 			</label>
@@ -76,13 +76,13 @@
 		</li>
 		<li class="info-list">
 			<span class="info-left">详细地址</span>
-			<input type='text'></input>
+			<input type='text'>
 		</li>
 	</ul>
 	<div class="p-title">企业环境照片</div>
 	<ul class="upload-s-wrapper clearfix">
 		<li class="upload-s-content" style="display:none">
-				<img src="" class="product-p">
+			<img src="" class="product-p">
 		</li>
 		<li class="upload-s-content">
 			<label for="upload">
