--- a/neutral_list.html
+++ b/neutral_list.html
@@ -22,7 +22,7 @@
 			<p class="pt-content">预计交货：2017-12-30</p>
 		</div>
 	</a>
-	<a href="./apply_order.html" class="pt-wrapper a-block clearfix">
+	<a href="./apply_order_detail.html" class="pt-wrapper a-block clearfix">
 		<div class="pt-pic avatar pt-p-b">
 			<img src="./images/T袖2.png" class="img-position">
 		</div>
