--- a/pay.html
+++ b/pay.html
@@ -20,7 +20,7 @@
 		<li class="info-list">
 			<span class="text">请输入小费/零件费：</span>
 			<span class='btn btn-span free'>
-				<input type="num" placeholder="0.00">
+				<input type="number" placeholder="0.00">
 				<span class="hui">元</span>
 			</span>
 		</li>
