--- a/phone_verify.html
+++ b/phone_verify.html
@@ -24,7 +24,7 @@
 		</li>
 		<li class="info-list">
 			<span class="info-left">验证码</span>
-			<input type='text' placeholder="输入验证码" class="info-right"></input>
+			<input type='number' placeholder="输入验证码" class="info-right">
 		</li>
 	</ul>
 	<button type="button" class="btn btn-default">下一步</button>
