--- a/repair_model.html
+++ b/repair_model.html
@@ -17,22 +17,22 @@
 		<i class="icon-search"></i>
 	</div>
 	<ul class="info-wrapper">
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_detail_text.html' class="info-item">GC6710</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_detail_text.html' class="info-item">GK0056</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_detail_text.html' class="info-item">GK335</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_detail_text.html' class="info-item">GC6170</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_detail_text.html' class="info-item">GC6880</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_detail_text.html' class="info-item">其他</a>
 		</li>
 	</ul>
