--- a/repair_type.html
+++ b/repair_type.html
@@ -17,22 +17,22 @@
 		<i class="icon-search"></i>
 	</div>
 	<ul class="info-wrapper">
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_brand.html' class="info-item">单针平缝机</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_brand.html' class="info-item">双针平缝机</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_brand.html' class="info-item">包缝机</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_brand.html' class="info-item">单针平缝机</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_brand.html' class="info-item">双针平缝机</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href='./repair_brand.html' class="info-item">包缝机</a>
 		</li>
 	</ul>
