--- a/repairer_info.html
+++ b/repairer_info.html
@@ -40,7 +40,9 @@
 			<h3 class="info-title">修理次数（55次）</h3>
 			<form>
 				<span>信任值</span>
-				<meter max="100" min="0" value="80"></meter>
+				<span class="trust-wrapper">
+					<span class="trust-progress"></span>
+				</span>
 				<span class="trust-value">信任值高</span>
 			</form>
 		</li>
