--- a/report.html
+++ b/report.html
@@ -14,7 +14,7 @@
 	</div>
 	<div class='form-wrapper'>
 		<p class='text'>机器编码：</p>
-		<input type="text" placeholder='请填写机器编码'>
+		<input type="number" placeholder='请填写机器编码'>
 	</div>
 	<div class='form-wrapper'>
 		<p class='text'>故障问题</p>
