--- a/address_management.html
+++ b/address_management.html
@@ -12,7 +12,7 @@
 	<ul class="info-wrapper verify">
 		<li class="info-list">
 			<span class="info-left">收货人</span>
-			<input type='text' placeholder="姓名"></input>
+			<input type='text' placeholder="姓名">
 		</li>
 		<li class="info-list">
 			<span class="info-left">联系电话</span>
