--- a/bund_bank_card.html
+++ b/bund_bank_card.html
@@ -13,11 +13,11 @@
 	<ul class="info-wrapper verify">
 			<li class="info-list">
 				<span class="info-left">持卡人</span>
-				<input type='text' placeholder="请输入持卡人姓名"></input>
+				<input type='text' placeholder="请输入持卡人姓名">
 			</li>
 			<li class="info-list">
 				<span class="info-left">银行卡号</span>
-				<input type='text' placeholder="请输入银行卡号"></input>
+				<input type='number' placeholder="请输入银行卡号">
 			</li>
 			<li class="info-list">
 				<span class="info-left">开户银行</span>
@@ -25,11 +25,11 @@
 			</li>
 			<li class="info-list">
 				<span class="info-left">开户支行</span>
-				<input type='text' placeholder="请输入开户支行名称" ></input>
+				<input type='text' placeholder="请输入开户支行名称" >
 			</li>
 			<li class="info-list">
 				<span class="info-left">手机号码</span>
-				<input type='tel' maxlength="11" placeholder="请输入银行预留手机号码" ></input>
+				<input type='tel' maxlength="11" placeholder="请输入银行预留手机号码" >
 			</li>
 		</ul>
 	<button type="button" class="btn btn-default btn-fixed">绑定</button>
