--- a/certification_c.html
+++ b/certification_c.html
@@ -17,23 +17,23 @@
 		<ul class="info-wrapper verify">
 			<li class="info-list">
 				<span class="info-left">企业名称</span>
-				<input type='text' placeholder="请输入完整名称"></input>
+				<input type='text' placeholder="请输入完整名称">
 			</li>
 			<li class="info-list">
 				<span class="info-left">社会信用码</span>
-				<input type='text' placeholder="请输入信用代码"></input>
-			</li>
+				<input type='number' placeholder="请输入信用代码">
+
 			<li class="info-list">
 				<span class="info-left">对公账户</span>
-				<input type='text' placeholder="请填入账户" ></input>
-			</li>
+				<input type='number' placeholder="请填入账户">
+
 			<li class="info-list">
 				<span class="info-left">开户银行</span>
-				<input type='text' placeholder="如：兴业银行" ></input>
+				<input type='text' placeholder="如：兴业银行">
 			</li>
 			<li class="info-list">
 				<span class="info-left">开户支行</span>
-				<input type='text' placeholder="如：兴业银行湖滨分行" ></input>
+				<input type='text' placeholder="如：兴业银行湖滨分行">
 			</li>
 		</ul>
 		<div class="p-title">营业执照照片</div>
