--- a/to_accept_order.html
+++ b/to_accept_order.html
@@ -25,7 +25,7 @@
 		<li class="info-list">
 			<span class="info-item">双针平缝机</span>
 			<i tabindex="0" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
-			<span class='fr eqm-text'>6件</span>>
+			<span class='fr eqm-text'>6件</span>
 			<span class='fr eqm-text'>2成新</span>
 		</li>
 	</ul>
@@ -33,30 +33,30 @@
 	<ul class="info-wrapper">
 		<li class="info-list">
 			<span class="info-left info-left-width">收货人</span>
-			<span class="info-right">韩梅梅</span>>
+			<span class="info-right">韩梅梅</span>
 		</li>
 		<li class="info-list">
 			<span class="info-left info-left-width">联系电话</span>
-			<span class="info-right">18712345678</span>>
+			<span class="info-right">18712345678</span>
 		</li>
 		<li class="info-list">
 			<span class="info-left info-left-width">详细地址</span>
-			<span class="info-right">福建省 石狮市 服装城总部大厦二楼大门右拐执行第4排工位</span>>
+			<span class="info-right">福建省 石狮市 服装城总部大厦二楼大门右拐执行第4排工位</span>
 		</li>
 	</ul>
 	<div class="p-title">租赁时间</div>
 	<ul class="info-wrapper">
 		<li class="info-list">
 			<span class="info-left info-left-width">起租时间</span>
-			<span class="info-right">2017-09-14</span>>
+			<span class="info-right">2017-09-14</span>
 		</li>
 		<li class="info-list">
 			<span class="info-left info-left-width">还租时间</span>
-			<span class="info-right">2017-10-14</span>>
+			<span class="info-right">2017-10-14</span>
 		</li>
 		<li class="info-list">
 			<span class="info-left info-left-width">租赁时长</span>
-			<span class="info-right">30 天</span>>
+			<span class="info-right">30 天</span>
 		</li>
 	</ul>
 	<div class="clearfix cost">
