对部分页面进行了样式微调

--- a/my_order.html
+++ b/my_order.html
@@ -12,7 +12,7 @@
 <body>
 	<div class='nav-wrapper clearfix'>
 		<a href="./my_order.html" class='nav-item fl nav-item-active'>全部</a>
-		<a href="" class='nav-item fl'>代付款</a>
+		<a href="" class='nav-item fl'>待付款</a>
 		<a href="./to_accept_order.html" class='nav-item fl'>待收货</a>
 		<a href="#" class='nav-item fl'>已完成</a>
 		<a href="#" class='nav-item fl'>已取消</a>
