--- a/order.html
+++ b/order.html
@@ -93,6 +93,13 @@
 						<span>我的工单</span>
 					</a>
 				</li>
+				<li>
+					<a href="#">
+						<i class="icon-manage"></i>
+						<span>管理接单</span>
+					</a>
+				</li>
+
 			</ul>
 			<div class="user-c clearfix">
 				<a href='./message.html' class="fl">
