--- a/position.html
+++ b/position.html
@@ -26,6 +26,27 @@
 		<a href="javascript:;" class="search-text">搜索</a>
 	</div>
 	<div class="map"></div>
+	<div class="menu-wrapper">
+		<div class="menu-header">
+			<a href="javascript:;" class='fl user-control'><i class='icon-user'></i></a>
+			<i class="serve">全部服务</i>
+			<i class="icon-X close"></i>
+		</div>
+		<div class="menu-list blur">
+			<a href="#">
+				<i class="icon-repair"></i>
+				<p>机修</p>
+			</a>
+			<a href="#">
+				<i class="icon-lease"></i>
+				<p>租赁</p>
+			</a>
+			<a href="#">
+				<i class="icon-order"></i>
+				<p>订单</p>
+			</a>
+		</div>
+	</div>
 	<div class="button">
 		<input type="hidden" value="0">
 		<div class="button-switch"></div>
@@ -61,7 +82,7 @@
 	</div>
 	<div class="menu-wrapper">
 		<div class="menu-header">
-			<a href="./personal_data.html" class='fl'><i class='icon-user'></i></a>
+			<a href="javascript:;" class='fl user-control'><i class='icon-user'></i></a>
 			<i class="serve">全部服务</i>
 			<i class="icon-X close"></i>
 		</div>
@@ -131,6 +152,12 @@
 					<a href="./order_for_repirer.html">
 						<i class="icon-my-order"></i>
 						<span>我的工单</span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<i class="icon-manage"></i>
+						<span>管理接单</span>
 					</a>
 				</li>
 			</ul>
