--- a/repairer_info.html
+++ b/repairer_info.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<div class="pt-wrapper p-info clearfix">
-		<div class="pt-pic fl">
-			<img src="./images/avatar3.png" class="avatar3">
+		<div class="pt-pic fl repairer">
+			<img src="./images/avatar3.png" class="repairer-ava">
 		</div>
 		<div class="pt-text fl">
 			<span class="pt-title pt-v-t pt-18 mr-20">头像</span>
