管理接单新增订单分类

--- a/into_lease.html
+++ b/into_lease.html
@@ -80,13 +80,13 @@
 				<li>
 					<a href="./my_order.html">
 						<i class="icon-tmp-4"></i>
-						<span>我的订单</span>
+						<span>租赁订单</span>
 					</a>
 				</li>
 				<li>
 					<a href="./temporary.html">
 						<i class="icon-tmp-5"></i>
-						<span>暂存订单</span>
+						<span>机修工单</span>
 					</a>
 				</li>
 				<li>
