--- a/pay.html
+++ b/pay.html
@@ -28,14 +28,14 @@
 	<div class="p-title">选择支付方式</div>
 	<ul class="info-wrapper">
 		<li class="info-list info-radio">
-			<i class="icon-wechat"></i>
-			<span class="info-item">微信支付</span>
-			<i class="icon-check checked"></i>
+			<i class="icon-wechat info-vtc"></i>
+			<span class="info-item info-vtc">微信支付</span>
+			<i class="icon-check checked mt-4"></i>
 		</li>
 		<li class="info-list info-radio">
-			<i class='icon-money'></i>
-			<span class="info-item">余额支付</span>
-			<i class="icon-check checked"></i>
+			<i class='icon-money info-vtc'></i>
+			<span class="info-item info-vtc">余额支付</span>
+			<i class="icon-check checked mt-4"></i>
 		</li>
 	</ul>
 	<div class="btn-fixed">
