--- a/neutral_list.html
+++ b/neutral_list.html
@@ -9,32 +9,68 @@
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
 <body>
-	<a href="./apply_order_detail.html" class="pt-wrapper a-block clearfix">
-		<div class="pt-pic avatar pt-p-b">
-			<img src="./images/T袖.png" class="img-position">
-		</div>
-		<div class="pt-text">
-			<p class="pt-title">棉T袖</p>
-			<p class="pt-content">
-				<span>1000件</span>
-				<span>内销</span>
-			</p>
-			<p class="pt-content">预计交货：2017-12-30</p>
-		</div>
-	</a>
-	<a href="./apply_order_detail.html" class="pt-wrapper a-block clearfix">
-		<div class="pt-pic avatar pt-p-b">
-			<img src="./images/T袖2.png" class="img-position">
-		</div>
-		<div class="pt-text">
-			<p class="pt-title">棉T袖</p>
-			<p class="pt-content">
-				<span>1000件</span>
-				<span>内销</span>
-			</p>
-			<p class="pt-content">预计交货：2017-12-30</p>
-		</div>
-	</a>
+	<div class="neutral-header">
+		<a href="javascript:;" class="order-type" data-target='order-1'>外包接单</a>
+		<a href="javascript:;" class="order-type" data-target='order-2'>承接接单</a>
+	</div>
+
+	<section id='order-1' style="display: none">
+		<a href="./apply_order_detail.html" class="pt-wrapper a-block clearfix">
+			<div class="pt-pic avatar pt-p-b">
+				<img src="./images/T袖.png" class="img-position">
+			</div>
+			<div class="pt-text">
+				<p class="pt-title">棉T袖 <span class="recived-order">已接300件</span></p>
+				<p class="pt-content">
+					<span>1000件</span>
+					<span>内销</span>
+				</p>
+				<p class="pt-content">预计交货：2017-12-30</p>
+			</div>
+		</a>
+		<a href="./apply_order_detail.html" class="pt-wrapper a-block clearfix">
+			<div class="pt-pic avatar pt-p-b">
+				<img src="./images/T袖2.png" class="img-position">
+			</div>
+			<div class="pt-text">
+				<p class="pt-title">棉T袖</p>
+				<p class="pt-content">
+					<span>1000件</span>
+					<span>内销</span>
+				</p>
+				<p class="pt-content">预计交货：2017-12-30</p>
+			</div>
+		</a>
+	</section>
+
+	<section id='order-2' style="display: none">
+		<a href="./apply_order_detail.html" class="pt-wrapper a-block clearfix">
+			<div class="pt-pic avatar pt-p-b">
+				<img src="./images/T袖2.png" class="img-position">
+			</div>
+			<div class="pt-text">
+				<p class="pt-title">棉T袖</p>
+				<p class="pt-content">
+					<span>1000件</span>
+					<span>内销</span>
+				</p>
+				<p class="pt-content">预计交货：2017-12-30</p>
+			</div>
+		</a>
+		<a href="./apply_order_detail.html" class="pt-wrapper a-block clearfix">
+			<div class="pt-pic avatar pt-p-b">
+				<img src="./images/T袖.png" class="img-position">
+			</div>
+			<div class="pt-text">
+				<p class="pt-title">棉T袖 <span class="recived-order">已接300件</span></p>
+				<p class="pt-content">
+					<span>1000件</span>
+					<span>内销</span>
+				</p>
+				<p class="pt-content">预计交货：2017-12-30</p>
+			</div>
+		</a>
+	</section>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
