头像圆形显示

--- a/order.html
+++ b/order.html
@@ -16,6 +16,13 @@
 		<a href="./order.html" class='nav-item fl nav-item-active'>订单</a>
 		<a href="javascript:;" class='nav-item menu fl'><i class="icon-menu"></i></a>
 	</div>
+	<div class="bg-wrapper" id="lease">
+		<img class="bg-height" src="./images/repair-order.png">
+		<div class="btn-wrapper">
+			<a href='./build_worksheet.html' class="btn btn-default btn-bottom">发布加工单</a>
+			<a href='./neutral.html' class="btn btn-white">空挡找单</a>
+		</div>
+	</div>
 	<div class="menu-wrapper">
 		<div class="menu-header blur">
 			<a href="./personal_data.html" class='fl'><i class='icon-user'></i></a>
@@ -37,19 +44,11 @@
 			</a>
 		</div>
 	</div>
-	<div class="bg-wrapper" id="lease">
-		<img class="bg-height" src="./images/repair-order.png">
-		<div class="btn-wrapper">
-			<a href='./build_worksheet.html' class="btn btn-default btn-bottom">发布加工单</a>
-			<a href='./neutral.html' class="btn btn-white">空挡找单</a>
-		</div>
-	</div>
-
 	<div class="user-wrapper">
 		<div class="user-mask"></div>
 		<div class="user-info">
 			<a href="./personal_data.html" class="user">
-				<img src="./images/avatar2.0.png" alt="" class="avatar2">
+				<img src="./images/company-1@3x.png" alt="" class="avatar2">
 				<div class="name">李雷</div>
 				<p class="user-text">
 					<span><i class="icon-confirm"></i>个人认证</span>
