--- a/rating.html
+++ b/rating.html
@@ -13,7 +13,7 @@
 		<p class="title_top rating-top">您满意这次的服务吗？</p>
 		<p class="title_bottom rating-bottom">给师傅的服务一些点评和鼓励吧~</p>
 	</div>
-	<img src="./images/avatar2.0.png" alt="" class="avatar2">
+	<img src="./images/company-1@3x.png" alt="" class="avatar2">
 	<div class="name">李雷</div>
 	<ul class="rating clearfix" id="rating">
 		<li class="rating-item" title="很不好"></li>
