--- a/worksheet_detail.html
+++ b/worksheet_detail.html
@@ -73,7 +73,7 @@
 	<div class="acq-company">
 		<a href="./company_detail.html" class="pt-wrapper a-block clearfix">
 			<div class="pt-pic avatar">
-				<img src="./images/avatar.png">
+				<img src="./images/company-1@3x.png">
 			</div>
 			<div class="pt-text">
 				<p class="pt-title pt-18">
@@ -91,7 +91,7 @@
 	<div class="acq-company">
 		<a href="./company_detail.html" class="pt-wrapper a-block clearfix">
 			<div class="pt-pic avatar">
-				<img src="./images/avatar4.png">
+				<img src="./images/company-2@3x.png">
 			</div>
 			<div class="pt-text">
 				<p class="pt-title pt-18">
