--- a/edit_data.html
+++ b/edit_data.html
@@ -16,7 +16,7 @@
 					<span class="pt-v-t">头像</span>
 					<span class="icon-arrow-r more-middle"></span>
 					<div class="pt-pic pt-p-fr">
-						<img src="./images/avatar3.png" class="avatar3">
+						<img src="./images/company-1@3x.png" class="avatar3">
 					</div>
 				</div>
 			</label>
