--- a/lease.html
+++ b/lease.html
@@ -16,6 +16,16 @@
 		<a href="./order.html" class='nav-item fl'>订单</a>
 		<a href="javascript:;" class='nav-item fl menu'><i class="icon-menu"></i></a>
 	</div>
+	<div class="bg-wrapper" id="lease">
+		<img src="./images/bg-lease.png">
+		<div class="title title-position">
+			<p class="title-top">助力您的生产</p>
+			<p class="title-bottom">完善企业认证信息即可加速租赁流程</p>
+		</div>
+		<div class="btn-wrapper">
+			<a href="./certification_p.html" class="btn btn-white">我要成为租客</a>
+		</div>
+	</div>
 	<div class="menu-wrapper">
 		<div class="menu-header blur">
 			<a href="./personal_data.html" class='fl'><i class='icon-user'></i></a>
@@ -37,21 +47,11 @@
 			</a>
 		</div>
 	</div>
-	<div class="bg-wrapper" id="lease">
-		<img src="./images/bg-lease.png">
-		<div class="title title-position">
-			<p class="title-top">助力您的生产</p>
-			<p class="title-bottom">完善企业认证信息即可加速租赁流程</p>
-		</div>
-		<div class="btn-wrapper">
-			<a href="./certification_p.html" class="btn btn-white">我要成为租客</a>
-		</div>
-	</div>
 	<div class="user-wrapper">
 		<div class="user-mask"></div>
 		<div class="user-info">
 			<a href="./personal_data.html" class="user">
-				<img src="./images/avatar2.0.png" alt="" class="avatar2">
+				<img src="./images/company-1@3x.png" alt="" class="avatar2">
 				<div class="name">李雷</div>
 				<p class="user-text">
 					<span><i class="icon-confirm"></i>个人认证</span>
