--- a/position.html
+++ b/position.html
@@ -110,7 +110,7 @@
 		<div class="user-mask"></div>
 		<div class="user-info">
 			<a href="./personal_data.html" class="user">
-				<img src="./images/avatar2.0.png" alt="" class="avatar2">
+				<img src="./images/company-1@3x.png" alt="" class="avatar2">
 				<div class="name">李雷</div>
 				<p class="user-text">
 					<span><i class="icon-confirm"></i>个人认证</span>
