--- a/repaired.html
+++ b/repaired.html
@@ -42,7 +42,7 @@
 	<div class="p-title">维修师傅</div>
 	<a href="./repairer_info.html" class="pt-wrapper a-block clearfix">
 		<div class="pt-pic avatar">
-			<img src="./images/avatar.png">
+			<img src="./images/company-1@3x.png">
 		</div>
 		<div class="pt-text">
 			<p class="pt-title pt-18">李雷
