更改了订单部分背景和修复了选择设备页面最后设备被遮盖的问题

--- a/lease_step.html
+++ b/lease_step.html
@@ -24,7 +24,7 @@
 			<p>进行支付</p>
 		</li>
 	</ul>
-	<ul class="info-wrapper">
+	<ul class="info-wrapper eqm-last">
 		<li class="title info-list">
 			<p class="title-top">选择租赁设备</p>
 			<p class="title-bottom">选择您需要的设备，或选择其他进行详细说明需求</p>
