--- a/repair.html
+++ b/repair.html
@@ -13,7 +13,7 @@
 		<p class="title-top">完善技能信息，即刻开启接单服务</p>
 		<p class="title-bottom">信息仅用于平台审核，不会泄露给任何组织或个人</p>
 	</div>
-	<ul class="info-wrapper verify">
+	<ul class="info-wrapper verify" style="margin-bottom: 0">
 		<li class="info-list">
 			<span class="info-left">姓名</span>
 			<input type='text' placeholder="**文(请输入完整姓名)" class="info-right">
