--- a/my_order.html
+++ b/my_order.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="order">
 		<p class="order-title">订单号：<span>2817644777779</span><span>待付款</span></p>
-		<ul class="info-wrapper bg-white">
+		<ul class="info-wrapper order-bg">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
 				<i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
@@ -42,7 +42,7 @@
 	</div>
 	<div class="order">
 		<p class="order-title">订单号：<span>2817644777779</span><span>待收货</span></p>
-		<ul class="info-wrapper bg-white">
+		<ul class="info-wrapper order-bg">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
 				<i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
@@ -64,7 +64,7 @@
 	</div>
 	<div class="order">
 		<p class="order-title">订单号：<span>2817644777779</span><span>已完成</span></p>
-		<ul class="info-wrapper bg-white">
+		<ul class="info-wrapper order-bg">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
 				<i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
@@ -82,7 +82,7 @@
 	</div>
 	<div class="order">
 		<p class="order-title">订单号：<span>2817644777779</span><span>已取消</span></p>
-		<ul class="info-wrapper bg-white">
+		<ul class="info-wrapper order-bg">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
 				<i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
