解决了宽度变宽文字被挤到下一行的问题

--- a/to_accept_order.html
+++ b/to_accept_order.html
@@ -20,13 +20,19 @@
 			<span class="info-item">单针平缝机</span>
 			<i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
 			<span class='fr eqm-text'>5件</span>
-			<span class='fr eqm-text'>9成新</span>
+			<span class='fr eqm-ann'>9成新</span>
 		</li>
 		<li class="info-list">
 			<span class="info-item">双针平缝机</span>
 			<i tabindex="0" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
 			<span class='fr eqm-text'>6件</span>
-			<span class='fr eqm-text'>2成新</span>
+			<span class='fr eqm-ann'>2成新</span>
+		</li>
+		<li class="info-list">
+			<span class="info-item">检针机（验针机）</span>
+			<i tabindex="0" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
+			<span class='fr eqm-text'>6件</span>
+			<span class='fr eqm-ann'>2成新</span>
 		</li>
 	</ul>
 	<div class="p-title">收货地址</div>
