部分页面优化

--- a/drawing.html
+++ b/drawing.html
@@ -10,13 +10,15 @@
 </head>
 <body>
 	<div class="recharge-wrapper">
-		<div class="recharge">
+		<div class="recharge pb-to-14">
 			<span class="balance">提款金额</span>
+			<span class='text'>元</span>
+			<input type="number" placeholder="0.00" class="remoney">
 			<p>
 				<span>余额：</span>
 				<span class="">1100.00</span>
 				<span class=''>元,</span>
-				<a href="#">全部提现</a>
+				<a href="#">全部提款</a>
 			</p>
 		</div>
 		<div class="recharge padding-top">
