--- a/neutral_list.html
+++ b/neutral_list.html
@@ -14,7 +14,7 @@
 		<a href="javascript:;" class="order-type" data-target='order-2'>承接接单</a>
 	</div>
 
-	<section id='order-1' style="display: none">
+	<section id='order-1'>
 		<a href="./apply_order_detail.html" class="pt-wrapper a-block clearfix">
 			<div class="pt-pic avatar pt-p-b">
 				<img src="./images/T袖.png" class="img-position">
