--- a/recharge.html
+++ b/recharge.html
@@ -13,12 +13,12 @@
 		<div class="recharge">
 			<span class="balance">充值金额</span>
 			<span class='text'>元</span>
-			<span class="money">0.00</span>
+			<input id='remoney' type="number" placeholder="0.00" class="remoney">
 		</div>
 		<div class="recharge padding-top">
 			<span class="balance fl">充值方式</span>
 			<span class="balance fr"> 元</span>
-			<span class="balance fr">500:00</span>
+			<span class="balance fr">500.00</span>
 			<span class="balance fr">微信余额：</span>
 			<button type="button" class="btn btn-default center">充值</button>
 		</div>
