--- a/repair_brand.html
+++ b/repair_brand.html
@@ -9,7 +9,8 @@
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
 <body>
-	<div class="header-alert">请准确选择报修品牌，让我们更快帮你定位问题与联系维修</div>
+	<div class="header-alert">
+		<span>请准确选择报修品牌，让我们更快帮你定位问题与联系维修</span></div>
 	<div class="search-wrapper">
 		<input type="search" name="" placeholder="搜索类型" class="search">
 		<i class="icon-search"></i>
