--- a/edit_data.html
+++ b/edit_data.html
@@ -33,7 +33,7 @@
 							<span class="hui">请选择性别</span>
 						</span>
 						<select id='gender' class="gender">
-							<option value="男">男</option>
+							<option value="男" selected="selected">男</option>
 							<option value="女">女</option>
 							<option value="保密">保密</option>
 						</select>
