修复了部分表单在iphone6plus显示不全的问题以及修改了部分星级评分

--- a/edit_data.html
+++ b/edit_data.html
@@ -42,22 +42,22 @@
 				</li>
 				<li class="info-list">
 					<span class="info-left">电话</span>
-					<input type='tel' maxlength="11" placeholder="请填写正确手机号码" >
+					<input type='tel' maxlength="11" placeholder="请填写正确手机号码">
 				</li>
 				<li class="info-list">
 					<span class="info-left">微信</span>
-					<input type='text' placeholder="请填写微信号码" >
+					<input type='text' placeholder="请填写微信号码">
 				</li>
 				<li class="info-list">
 					<span class="info-left">QQ</span>
-					<input type='number' placeholder="请填写QQ号码" >
+					<input type='number' placeholder="请填写QQ号码">
 				</li>
 				<li class="info-list">
 					<span class="info-left">个性签名</span>
-					<input type='text' placeholder="简短介绍一下自己" >
+					<input type='text' placeholder="简短介绍一下自己">
 				</li>
 			</ul>
-			<button class="btn btn-default">保存</button>
+			<button class="btn btn-default btn-top">保存</button>
 		</div>
 	</div>
 
