--- a/pay.html
+++ b/pay.html
@@ -30,12 +30,12 @@
 		<li class="info-list info-radio">
 			<i class="icon-wechat info-vtc"></i>
 			<span class="info-item info-vtc">微信支付</span>
-			<i class="icon-check checked mt-4"></i>
+			<i class="icon-check checked"></i>
 		</li>
 		<li class="info-list info-radio">
 			<i class='icon-money info-vtc'></i>
 			<span class="info-item info-vtc">余额支付</span>
-			<i class="icon-check checked mt-4"></i>
+			<i class="icon-check checked"></i>
 		</li>
 	</ul>
 	<div class="btn-fixed">
