--- a/repairer_info.html
+++ b/repairer_info.html
@@ -30,13 +30,13 @@
 			<span class="info-left">区域</span>
 			<span class="info-item">泉州市区、厦门市区</span>
 		</li>
-		<li class="info-list">
+		<li class="info-list-more">
 			<span class="info-left">简介</span>
 			<textarea class="textarea" placeholder="未完善">福建省 石狮市 服装城总部大厦二楼大门右拐执行第4排工位</textarea>
 		</li>
 	</ul>
 	<ul class="info-wrapper">
-		<li class="info-list">
+		<li class="info-list-more">
 			<h3 class="info-title">修理次数（55次）</h3>
 			<form>
 				<span>信任值</span>
@@ -46,7 +46,7 @@
 				<span class="trust-value">信任值高</span>
 			</form>
 		</li>
-		<li class="info-list info-rating clearfix">
+		<li class="info-list-more info-rating clearfix">
 			<p class="info-left fl">评价</p>
 			<ul class="rating rating-s clearfix fl" id="rating-1">
 				<li class="rating-item rating-item-s" title="很不好"></li>
@@ -56,7 +56,7 @@
 				<li class="rating-item rating-item-s" title="很好"></li>
 			</ul>
 		</li>
-		<li class="info-list info-h clearfix">
+		<li class="info-list-more info-h clearfix">
 			<div class="info-right clearfix">
 				<img src="./images/users-1.png" class="img-users fl">
 				<div class="right-desc fl">
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="info-list info-h clearfix">
+		<li class="info-list-more info-h clearfix">
 			<div class="info-right clearfix">
 				<img src="./images/users-2.png" class="img-users fl">
 				<div class="right-desc fl">
