--- a/waiting_repair.html
+++ b/waiting_repair.html
@@ -27,7 +27,7 @@
 				<span class="info-left">型号</span>
 				<span class="info-right">F7300A</span>
 			</li>
-			<li class="info-list">
+			<li class="info-list-more">
 				<span class="info-left vl-t">问题</span>
 				<div class="autowrap">
 					<span>不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不</span>
@@ -79,7 +79,7 @@
 			<span class="info-right">18712345678</span>
 			<button class='btn btn-s call'>马上联系</button>
 		</li>
-		<li class="info-list repair-addr">
+		<li class="info-list-more repair-addr">
 			<span class="info-left info-left-width">报修地址</span>
 			<span class="info-right">
 				福建省 石狮市 服装城总部大厦二楼大门右拐执行第4排工位
