--- a/lease_step.html
+++ b/lease_step.html
@@ -24,11 +24,11 @@
 			<p>进行支付</p>
 		</li>
 	</ul>
+	<div class="title adjust">
+		<p class="title-top">选择租赁设备</p>
+		<p class="title-bottom">选择您需要的设备，或选择其他进行详细说明需求</p>
+	</div>
 	<ul class="info-wrapper eqm-last">
-		<li class="title info-list">
-			<p class="title-top">选择租赁设备</p>
-			<p class="title-bottom">选择您需要的设备，或选择其他进行详细说明需求</p>
-		</li>
 		<li class="info-list info-check">
 			<span class="info-item">GC6710</span>
 			<i class="icon-check checked"></i>
