--- a/lease_step3.html
+++ b/lease_step3.html
@@ -34,14 +34,14 @@
 		<li class="info-list">
 			<span class="info-item">单针平缝机</span>
 			<i tabindex="0" class="icon-i istyle" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-content="120元/天"></i>
-			<button class='btn btn-xs  fr btn-r'>数量</button>
-			<button class='btn btn-xs  fr btn-r'>9成新</button>
+			<button class='btn btn-xs fr-c btn-r'>数量</button>
+			<button class='btn btn-xs fr-c btn-r'>9成新</button>
 		</li>
 		<li class="info-list">
 			<span class="info-item">双针平缝机</span>
 			<i tabindex="1" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
-			<button class='btn btn-xs  fr btn-r'>数量</button>
-			<button class='btn btn-xs  fr btn-r'>2成新</button>
+			<button class='btn btn-xs fr-c btn-r'>数量</button>
+			<button class='btn btn-xs fr-c btn-r'>2成新</button>
 		</li>
 	</ul>
 	<div class="p-title">收货地址</div>
@@ -54,7 +54,7 @@
 			<span class="info-left info-left-width">联系电话</span>
 			<span class="info-right">18712345678</span>
 		</li>
-		<li class="info-list">
+		<li class="info-list-more">
 			<span class="info-left info-left-width">详细地址</span>
 			<span class="info-right">福建省 石狮市 服装城总部大厦二楼大门右拐执行第4排工位</span>
 		</li>
