--- a/waiting_pay.html
+++ b/waiting_pay.html
@@ -49,7 +49,7 @@
 			<span class="info-left info-left-width">联系电话</span>
 			<span class="info-right">18712345678</span>
 		</li>
-		<li class="info-list">
+		<li class="info-list-more">
 			<span class="info-left info-left-width">报修地址</span>
 			<span class="info-right">福建省 石狮市 服装城总部大厦二楼大门右拐执行第4排工位</span>
 		</li>
